Style: Fixed overlapping of cards while vertical

--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,7 @@ nav {
 }
 
 .card {
-  width: 275px;
-  height: 235px;
+  width: 175px;
   font-size: 12px;
 }
 
